# pandera-ui

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  RELEASE_NOTES_1.0.0.md  RELEASE_NOTES_1.0.3.md  RELEASE_NOTES_1.0.4.md  RELEASE_NOTES_1.1.0.md  docker-compose.yml  mkdocs.yml  noxfile.py  pyproject.toml  test_matrix.sh
.claude/: settings.json
.github/workflows/: ci.yml  pages.yml  publish.yml
docs/: architecture.md  changelog.md  cli-reference.md  index.md  installation.md  python-api.md  quickstart.md
examples/: quickstart.py
frontend/: index.html
pandera_ui/: __init__.py  _console.py  _coverage.py  _export.py  _extract_ast.py  _extract_runtime.py  cli.py  models.py  scanner.py  server.py
pandera_ui/frontend/: demo-data.json
tests/: test_api.py  test_cli.py  test_coverage.py  test_export.py  test_scanner.py  test_scanner_edge_cases.py  test_scanner_internals.py  test_ui.py
tests/fixtures/: dataframe_schemas.py  schema_models.py
