[project]
name = "pandera-ui"
version = "0.1.0"
description = "Swagger-like UI for Pandera dataframe schemas"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Ildar", email = "darius.krsk@gmail.com"}]
keywords = ["pandera", "dataframe", "schema", "ui", "documentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandera>=0.19",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "typer>=0.12",
    "pydantic>=2.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
]

[project.urls]
Homepage = "https://github.com/darius-krsk/pandera-ui"
Repository = "https://github.com/darius-krsk/pandera-ui"

[project.scripts]
pandera-ui = "pandera_ui.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pandera_ui"]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "pytest-cov>=5",
    "pytest-playwright>=0.5",
    "mypy>=1.0",
    "pandas-stubs>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["pandera_ui"]
omit = ["pandera_ui/__init__.py"]

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
strict = false
ignore_missing_imports = true
check_untyped_defs = true
warn_return_any = false
